# phaneron

./: Cargo.toml  README.md  flake.nix  llvm-cov.json
crates/lethe-cli/src/: cli.rs  main.rs
crates/lethe-core/: Cargo.toml
crates/lethe-core/src/identifier/: mod.rs
crates/lethe-core/src/note/: mod.rs
docs/: README.md  identifiers.md  metadata.md  notes.md  repository.md
nix/apps/: default.nix
nix/base/: default.nix
nix/checks/: default.nix
nix/formatting/: default.nix
nix/shell/: default.nix
